@@ -12,15 +12,15 @@ perl <<'END_SCRIPT'
 #$Revision$
 #$URL$
 #------------------------------------------------------------------------------
-#* Unit test for the COD::CIF::Data::CODFlags::has_solvent_molecules()
-#* subroutine. Test the way the '_smtbx_masks_void_count_electrons'
+#* Unit test for the COD::CIF::Data::CODFlags::has_unmodelled_solvent_molecules()
+#* subroutine. Test the way the '_platon_squeeze_void_count_electrons'
 #* data item is handled.
 #**
 
 use strict;
 use warnings;
 
-use COD::CIF::Data::CODFlags qw( has_solvent_molecules );
+use COD::CIF::Data::CODFlags qw( has_unmodelled_solvent_molecules );
 use COD::CIF::Tags::Manage qw( new_datablock );
 
 my @data_blocks;
@@ -31,20 +31,20 @@ $data_block = new_datablock( '[NO]_empty' );
 push @data_blocks, $data_block;
 
 $data_block = new_datablock( '[YES]_0_platon_squeeze_electrons' );
-$data_block->{'values'}{'_smtbx_masks_void_count_electrons'} = [ '0' ];
+$data_block->{'values'}{'_platon_squeeze_void_count_electrons'} = [ '0' ];
 push @data_blocks, $data_block;
 
 $data_block = new_datablock( '[YES]_30_platon_squeeze_electrons' );
-$data_block->{'values'}{'_smtbx_masks_void_count_electrons'} = [ '30' ];
+$data_block->{'values'}{'_platon_squeeze_void_count_electrons'} = [ '30' ];
 push @data_blocks, $data_block;
 
 $data_block = new_datablock( '[YES]_?_platon_squeeze_electrons' );
-$data_block->{'values'}{'_smtbx_masks_void_count_electrons'} = [ '?' ];
+$data_block->{'values'}{'_platon_squeeze_void_count_electrons'} = [ '?' ];
 push @data_blocks, $data_block;
 
 print "Output\tData block name\n";
 for my $test_case (@data_blocks) {
-    print has_solvent_molecules($test_case) . "\t" . $test_case->{'name'} . "\n";
+    print has_unmodelled_solvent_molecules($test_case) . "\t" . $test_case->{'name'} . "\n";
 }
 
 END_SCRIPT
