@@ -5,6 +5,7 @@ cod-tools (^/branches/feature/egle-additional-CODFlags)
         - has_calc_sites() subroutine.
         - has_dummy_sites() subroutine.
         - has_superspace_group() subroutine.
+        - has_unmodelled_solvent_molecules() subroutine.
 
 cod-tools (unreleased)
 
